# proyecto-final-sd

./: .env  Cargo.toml  README.md  Script.sql  prod.csv  productos.csv  tienda-generica.db  tienda.db
migrations/: 20231122215328_clientes.sql  20231122215445_usuarios.sql  20231122215451_proveedores.sql  20231122215456_productos.sql  20231122215500_ventas.sql  20231122215510_detalle_ventas.sql
src/: entities.rs  main.rs
src/entities/: clientes.rs  detalle_ventas.rs  mod.rs  productos.rs  proveedores.rs  usuarios.rs  ventas.rs
