[package]
name = "proyecto-final-sd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0" 
actix-cors = "0.6.4"
serde = { version = "1.0.152", features = ["derive"] }
sqlx ={ version = "0.7.2" ,features = ["postgres", "runtime-tokio-rustls"] }
futures-util = "0.3.29"
csv = "1.3.0"
tempfile = "3.2"
sqlx-sqlite = "0.7.2"
actix-multipart = "0.6.1"